# audrey_ai_2.0

./: .env.example  .gitignore  README.md  compose.yaml  config.yaml  pyproject.toml
.claude/: settings.json
docker/: audrey.Dockerfile  custom-tools.Dockerfile
docs/: README.md  phase-1-deploy.md  phase-11-deploy.md  phase-12-deploy.md  phase-13-deploy.md  phase-13-plan.md  phase-14-deploy.md  phase-15-deploy.md  phase-16-deploy.md  phase-17-deploy.md  phase-2-deploy.md  phase-3-deploy.md  phase-4-deploy.md  phase-5-deploy.md  phase-6-deploy.md  phase-7-deploy.md  phase-8-deploy.md  phase-9-deploy.md  unraid-ollama.md
scripts/: pull-models.sh
src/audrey/: auth.py  config.py  main.py  metrics.py
src/audrey/kb/: chunk.py  cli.py  embed.py  extract.py  ingest.py  qdrant.py  uploads_db.py  user_store.py  watcher.py
src/audrey/models/: health.py  ollama.py  registry.py
src/audrey/pipeline/: classify.py  complexity.py  deep_panel.py  fast_path.py  graph.py  memory.py  planner.py  react.py  reflect.py  semaphore.py  state.py  synthesize.py
src/audrey/routes/: admin.py  files.py  kb.py  openai.py  upload_ui.py
src/audrey/static/: upload.html
src/audrey/tools/: discovery.py  dispatch.py
tools-server/: README.md  app.py  brave.py  db.py  pyproject.toml  settings.py
