[project]
name = "audrey-custom-tools"
version = "0.1.0"
description = "Audrey custom-tools FastAPI server — OpenAPI-discovered tool endpoints"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Bart" }]
license = { text = "Proprietary" }

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.28",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "aiosqlite>=0.20",
    "tenacity>=9.0",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
package = false
